# geoparquet

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md
examples/: example-2.R  example.csv  example.parquet  example.py  example_metadata-geoarrow.json  example_metadata.json  example_metadata_geoarrow.json  example_metadata_point.json
format-specs/: Gemfile  README.adoc  README.md  compatible-parquet.md  distributing-geoparquet.md  document.adoc  geo-parquet.md  geoparquet.md  notes.txt  parquet-raster.md  schema.json  spatial-type-guidance.md
interop/: README.md
raster/: parquet-raster.md
scripts/: README.md  bigquery_to_parquet.py  encoder.py  generate_example.py  parquet_to_bigquery.py  pyproject.toml  test_example.py  test_json_schema.py  update_example_schemas.py  write_nz_building_outline.py
test_data/: data-linestring-encoding_native.parquet  data-linestring-encoding_wkb.parquet  data-linestring.wkt.csv  data-multilinestring-encoding_native.parquet  data-multilinestring-encoding_wkb.parquet  data-multilinestring.wkt  data-multipoint-encoding_native.parquet  data-multipoint-encoding_wkb.parquet  data-multipoint.wkt  data-multipolygon-encoding_native.parquet  data-multipolygon-encoding_wkb.parquet  data-multipolygon.wkt  data-point-encoding_native.parquet  data-point-encoding_wkb.parquet  data-point.wkt  data-polygon-encoding_native.parquet  data-polygon-encoding_wkb.parquet  data-polygon.wkt.csv  data_crs_null.metadata.json  data_crs_null.parquet  data_geometry_column_name.metadata.json  data_geometry_column_name.parquet  (+9 more)
(+80 files in other folders)
