[tool.poetry]
name = "geoparquet-scripts"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^12.0.0"
geopandas = "^0.13.2"
shapely = "^2"
pandas = "^2"
click = "^8.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
jsonschema = "^4.17.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
